--- a/buổi 1/hw2/css.css
+++ b/buổi 1/hw2/css.css
@@ -160,9 +160,8 @@ article {
 
 
 footer {
-    margin:0 32px;
-    margin-top: 32px;
-    height: 20px;
-    width: 100%;
+    margin: 32px auto 0;
+    height: 16px;
+    width: 95%;
     background-color: aquamarine;
 }
